# hag_py

./: .env.example  .gitignore  CLAUDE.md  README.md  TYPESCRIPT_MIGRATION.md  pyproject.toml  requirements.txt  typescript_setup_instructions.md
config/: hvac_config.yaml  hvac_config_test.yaml
hag/: __init__.py  main.py
hag/config/: __init__.py  loader.py  settings.py
hag/core/: __init__.py  container.py  exceptions.py  logging.py
hag/home_assistant/: __init__.py  client.py  models.py
hag/hvac/: __init__.py  agent.py  controller.py  state_machine.py
hag/hvac/strategies/: __init__.py  cooling_strategy.py  heating_strategy.py
hag/hvac/tools/: __init__.py  hvac_control.py  sensor_reader.py  temperature_monitor.py
tests/: conftest.py
tests/integration/: test_hvac_integration.py
tests/unit/: test_config.py  test_cooling_logic.py  test_heating_logic.py  test_state_machine.py
